--- a/servidor/pagina/templates/table-datatable.html
+++ b/servidor/pagina/templates/table-datatable.html
@@ -91,7 +91,7 @@
                         <div class="card-header">
                            Buscar por categoria de producto
                         </div>
-                        <div class="card-body">
+                        <div class="card-body" style="overflow-x: auto;">
                             <div class="dataTable-wrapper dataTable-loading no-footer sortable searchable fixed-columns"><div class="dataTable-top"><div class="dataTable-dropdown"><select class="dataTable-selector form-select"><option value="5">5</option><option value="10" selected="">10</option><option value="15">15</option><option value="20">20</option><option value="25">25</option></select><label>Buscar por nombre</label></div><div class="dataTable-search"><input class="dataTable-input" placeholder="Buscar..." type="text"></div></div><div class="dataTable-container"><table class="table table-striped dataTable-table" id="table1">
                                 <thead>
                                     <tr><th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Nombre</a></th><th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Codigo</a></th><th data-sortable="" style="width: 20.8988%;"><a href="#" class="dataTable-sorter">Precio/compra</a></th><th data-sortable="" style="width: 26.7434%;"><a href="#" class="dataTable-sorter">Precio/Venta</a></th><th data-sortable="" style="width: 22.1386%;"><a href="#" class="dataTable-sorter">categoria</a></th><th data-sortable="" style="width: 22.1386%;"><a href="#" class="dataTable-sorter">cantidad</a></tr>
@@ -110,7 +110,7 @@
                                             
                                             Editar 
                                           </a></td>
-                                        <th data-sortable="" style="width:10.125%;"><a href="{%url 'borrar' lista.codigo_productos %}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Delete user">
+                                        <th data-sortable="" style="width:10.125%;"><a onclick="checker()" href="{%url 'borrar' lista.codigo_productos %}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Delete user">
                                             
                                             borrar
                                         </a></td>
@@ -149,6 +149,14 @@
 <script src="{% static 'assets/vendors/chartjs/Chart.min.js'%}"></script>
 <script src="{% static 'assets/vendors/apexcharts/apexcharts.min.js'%}"></script>
 <script src="{% static 'assets/js/pages/dashboard.js'%}"></script>
+<script>
+    function checker() {
+        var result = confirm('Estas seguro que quieres borrar este usuario?');
+        if (result == false) {
+            event.preventDefault();
+        }
+    }
+</script>
 
 <script src="{% static 'assets/js/main.js'%}"></script>
 {%endblock%}
