--- a/servidor/pagina/templates/Menu.html
+++ b/servidor/pagina/templates/Menu.html
@@ -3,6 +3,7 @@
 <html lang="es">
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> ARM Admin </title>
@@ -65,7 +66,7 @@
 
                     </li>
                     <li class="sidebar-item" id="sidebar-item3">
-                        <a href="index.html"class='sidebar-link'>
+                        <a href="{% url 'inicio'%}"class='sidebar-link'>
                             <i data-feather="home" width="20"></i>
                             <span>Reportes</span>
                         </a>
