--- a/servidor/pagina/templates/table-datatable.html
+++ b/servidor/pagina/templates/table-datatable.html
@@ -110,7 +110,7 @@
                                             
                                             Editar 
                                           </a></td>
-                                        <th data-sortable="" style="width:10.125%;"><a onclick="checker()" href="{%url 'borrar' lista.codigo_productos %}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Delete user">
+                                        <th data-sortable="" style="width:10.125%;"><a onclick="checker()" href="{%url 'borrarproducto' lista.codigo_productos %}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Delete user">
                                             
                                             borrar
                                         </a></td>
