--- a/servidor/pagina/templates/Menu.html
+++ b/servidor/pagina/templates/Menu.html
@@ -88,6 +88,20 @@
                         </a>
                     </li>
 
+                    <li class="sidebar-item" id="sidebar-item5">
+                        <a href="{% url 'cargar_proveedor' 0 %}" class="sidebar-link">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-file-plus">
+                                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                                <polyline points="14 2 14 8 20 8"></polyline>
+                                <line x1="12" y1="18" x2="12" y2="12"></line>
+                                <line x1="9" y1="15" x2="15" y2="15"></line>
+                            </svg>
+                            <span>Proveedores</span>
+                        </a>
+                    </li>
+
 
 
 
@@ -123,6 +137,8 @@
     var sidebar2 = document.getElementById('sidebar-item2')
     var sidebar3 = document.getElementById('sidebar-item3')
     var sidebar4 = document.getElementById('sidebar-item4')
+    var sidebar5 = document.getElementById('sidebar-item5')
+
     //SE TRAE LOS ELEMENTOS DE HTML AL JAVASCRIPT
 
     //SE VALIDA EN QUE RUTA ESTAS POSICIONADO
@@ -137,5 +153,8 @@
     }
     else if (window.location.pathname == '/pagina/vender'){
         sidebar4.className += ' active'
+    }
+    else if (window.location.pathname == '/pagina/cargarproveedor'){
+        sidebar5.className += ' active'
     }
 </script>
