--- a/servidor/pagina/templates/reportes_cliente.html
+++ b/servidor/pagina/templates/reportes_cliente.html
@@ -29,7 +29,7 @@
                                 <div>
                                     <h6 class='text-bold'>New Order</h6>
                                     <p class='text-xs'>
-
+                                        An order made by Ahmad Saugi for product Samsung Galaxy S69
                                     </p>
                                 </div>
                             </li>
@@ -66,33 +66,30 @@
             </ul>
         </div>
     </nav>
-    <form action="{% url 'cargar_proveedor' proveedor_actual %}" method="POST">
+    <form action="{% url 'editclientes' cliente_actual %}" method="POST">
         {% csrf_token %}
         <div class="forma">
-            <label for="ingresar-codigo">Nombre completo</label>
-            <input type="text" class="form-control" id="formGroupExampleInput2" name="nombre_proveedor"
-                value="{{datos_act.nombre_proveedor}}">
+            <label for="ingresar-nombre">Numero de cedula</label>
+            <input type="text" class="form-control" id="formGroupExampleInput1" name="codigo_cliente" value="{{datos_act.codigo_cliente}}">
+  
 
-            <label for="ingresar-precio-compra">Ruc</label>
-            <input type="text" class="form-control" id="formGroupExampleInput4" name="ruc_proveedor"
-                value="{{datos_act.ruc_proveedor}}">
+            <label for="ingresar-nombre">Nombre completo</label>
+            <input type="text" class="form-control" id="formGroupExampleInput1" name="nombre_cliente" value="{{datos_act.nombre_cliente}}">
 
-            <label for="ingresar-cantidad">Telefono</label>
-            <input type="text" class="form-control" id="formGroupExampleInput5" name="Telefono_proveedor"
-                value="{{datos_act.Telefono_proveedor}}">
 
-            <label for="ingresar-cantidad">Direccion</label>
-            <input type="text" class="form-control" id="formGroupExampleInput5" name="direccion_proveedor"
-                value="{{datos_act.direccion_proveedor}}">
+            <label for="ingresar-codigo">Número de telefono</label>
+            <input type="text" class="form-control" id="formGroupExampleInput2" name="telefonos_cliente" value="{{datos_act.telefono_cliente}}">
 
+            <label for="ingresar-precio-compra">Direccion</label>
+            <input type="text" class="form-control" id="formGroupExampleInput3" name="direccion_cliente" value="{{datos_act.direccion_cliente}}">
 
         </div>
         <footer>
             <div class="footer clearfix mb-0 text-muted">
-
-                <button class="guardar-producto" type="submit">
-                    Guardar nuevo proveedor
-                </button>
+                
+                    <button class="guardar-producto" onclick="return confirm('Estas seguro que quieres guardar este usuario');" type="submit">
+                        Guardar cliente
+                    </button>
 
             </div>
         </footer>
@@ -103,49 +100,42 @@
                 <div class="dataTable-dropdown">
                     <table class="table table-striped dataTable-table" id="table1">
                         <thead>
-
                             <tr>
+                                <th data-sortable="" style="width: 23.2012%;"><a href="#"
+                                    class="dataTable-sorter">Cedula</a></th>
                                 <th data-sortable="" style="width: 23.2012%;"><a href="#"
                                         class="dataTable-sorter">Nombre</a></th>
                                 <th data-sortable="" style="width: 23.2012%;"><a href="#"
-                                        class="dataTable-sorter">Codigo</a></th>
+                                        class="dataTable-sorter">telefono</a></th>
                                 <th data-sortable="" style="width: 20.8988%;"><a href="#"
-                                        class="dataTable-sorter">RUC</a></th>
-                                <th data-sortable="" style="width: 22.1386%;"><a href="#"
-                                        class="dataTable-sorter">Telefono</a></th>
-                                <th data-sortable="" style="width: 22.1386%;"><a href="#"
-                                        class="dataTable-sorter">Direccion</a></th>
-                                <th data-sortable="" style="width: 22.1386%;"><a href="#"
-                                        class="dataTable-sorter">Acciones</a></th>
+                                        class="dataTable-sorter">direccion</a>
                             </tr>
-
                         </thead>
 
-                        {%for lista in listaproveedor%}
-                            <tr>
+                        {%for lista in listaclientes%}
+                        <tr>
 
-                                <td>{{lista.nombre_proveedor}}</td>
-                                <td>{{lista.codigo_proveedor}}</td>
-                                <td>{{lista.ruc_proveedor}}</td>
-                                <td>{{lista.Telefono_proveedor}}</td>
-                                <td>{{lista.direccion_proveedor}}</td>
+                            <td>{{lista.codigo_cliente}}</td>
+                            <td>{{lista.nombre_cliente}}</td>
+                            <td>{{lista.telefono_cliente}}</td>
+                            <td>{{lista.direccion_cliente}}</td>
 
-                                <td data-sortable="" style="width:11.125%;"><a
-                                        href="{%url 'cargar_proveedor' lista.codigo_proveedor%}"
-                                        class="text-secondary font-weight-bold text-xs" data-toggle="tooltip"
-                                        data-original-title="Editar usuario">
-                                        Editar
-                                    </a>
-                                    <a href="{% url 'borrarproveedor' lista.codigo_proveedor %}"
-                                        class="text-secondary font-weight-bold text-xs" data-toggle="tooltip"
-                                        data-original-title="borrar registro">Borrar</a>
-                                </td>
-
-
+                            <td><th data-sortable="" style="width:11.125%;"><a href="{%url 'editclientes' lista.codigo_cliente%}"
+                                    class="text-secondary font-weight-bold text-xs" data-toggle="tooltip"
+                                    data-original-title="Editar usuario">
+                                    Editar
+                                </a></td>
+                            <td>
+                                <th data-sortable="" style="width:10.125%;"><a onclick="return confirm('Estas seguro que quieres borrar este usuario');" href="{%url 'borrarcliente' lista.codigo_cliente %}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Delete user">
+                                            
+                                    borrar
+                                </a></td>
+                            </td>    
 
 
 
-                            </tr>
+                                
+                        </tr>
                         {%endfor%}
                     </table>
                 </div>
@@ -159,7 +149,7 @@
             <script src="{% static 'assets/vendors/chartjs/Chart.min.js'%}"></script>
             <script src="{% static 'assets/vendors/apexcharts/apexcharts.min.js'%}"></script>
             <script src="{% static 'assets/js/pages/dashboard.js'%}"></script>
-
+           
 
             <script src="{% static 'assets/js/main.js'%}"></script>
             {%endblock%}
