--- a/servidor/pagina/templates/punto_venta.html
+++ b/servidor/pagina/templates/punto_venta.html
@@ -124,19 +124,8 @@
         </div>
         <div class="busqueda">
             <div>
-                <label for="ingresar-nombre">Buscar por codigo </label>
-                <input type="text" class="clienteptex">
-            </div>
-    
-            <div>
-                <label for="ingresar-nombre">Buscar por categoria </label>
-                <input type="text" class="clienteptex">
-            </div>
-          
-    
-            <div>
-                <label for="ingresar-nombre">Buscar por categoria </label>
-                <input type="text" class="clienteptex">
+                <label for="ingresar-nombre">Buscar producto </label>
+                <input type="text" class="clienteptex" id="buscar"> <!-- ID de "buscar" para realizar busqueda-->
             </div>
         </div>
 
@@ -147,7 +136,7 @@
             
             <div class="card-body" style="overflow-y: auto;"  >
                 
-                            <table class="table table-striped dataTable-table" id="table1" style="width:100%">
+                            <table class="table table-striped dataTable-table" id="tabla" style="width:100%"> <!-- ID de "tabla" para realizar busqueda-->
                                 <thead >
                                     <tr>
                                         <th data-sortable="dataTable-sorter" style="width: 10%;"><a href="#"
@@ -162,7 +151,7 @@
             
                                 {%for lista in listatabla%}
                                 <tr>
-
+                                    <td style="display: none;">{{lista.codigo_productos}}</td>
                                     <td>{{lista.nombre_productos}}</td>
                                     <td>{{lista.precioventa_productos}}</td>
                                     <td><input id="number" type="number" value="0" style="width: 5em;"></td>
@@ -242,6 +231,7 @@
 <script src="{% static 'assets/vendors/chartjs/Chart.min.js'%}"></script>
 <script src="{% static 'assets/vendors/apexcharts/apexcharts.min.js'%}"></script>
 <script src="{% static 'assets/js/pages/dashboard.js'%}"></script>
+<script src="{% static 'assets/js/search.js' %}"></script> <!-- Script para busqueda-->
 
 <script src="{% static 'assets/js/main.js'%}"></script>
 
