buscar en todos

--- a/servidor/pagina/templates/Menu.html
+++ b/servidor/pagina/templates/Menu.html
@@ -9,6 +9,7 @@
     <title> ARM Admin </title>
 
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.css'%}">
+    <link rel="stylesheet" href="{% static 'assets/css/font_awesome/css/all.min.css'%}">
 
     <link rel="stylesheet" href="{% static 'assets/vendors/chartjs/Chart.min.css'%}">
 
