--- a/servidor/pagina/templates/table-datatable.html
+++ b/servidor/pagina/templates/table-datatable.html
@@ -1,155 +1,183 @@
 {%extends 'Menu.html'%}
-{%  load static %}
+{% load static %}
 {%block cuerpo%}
 
 
-    <button class="sidebar-toggler btn x"><i data-feather="x"></i></button>
+<button class="sidebar-toggler btn x"><i data-feather="x"></i></button>
 </div>
+</div>
+<div id="main">
+    <nav class="navbar navbar-header navbar-expand navbar-light">
+        <a class="sidebar-toggler" href="#"><span class="navbar-toggler-icon"></span></a>
+        <button class="btn navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav d-flex align-items-center navbar-light ml-auto">
+                <li class="dropdown nav-icon">
+                    <a href="#" data-toggle="dropdown" class="nav-link  dropdown-toggle nav-link-lg nav-link-user">
+                        <div class="d-lg-inline-block">
+                            <i data-feather="bell"></i>
+                        </div>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right dropdown-menu-large">
+                        <h6 class='py-2 px-4'>Notifications</h6>
+                        <ul class="list-group rounded-none">
+                            <li class="list-group-item border-0 align-items-start">
+                                <div class="avatar bg-success mr-3">
+                                    <span class="avatar-content"><i data-feather="shopping-cart"></i></span>
+                                </div>
+                                <div>
+                                    <h6 class='text-bold'>New Order</h6>
+                                    <p class='text-xs'>
+                                        An order made by Ahmad Saugi for product Samsung Galaxy S69
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="dropdown nav-icon mr-2">
+                    <a href="#" data-toggle="dropdown" class="nav-link  dropdown-toggle nav-link-lg nav-link-user">
+                        <div class="d-lg-inline-block">
+                            <i data-feather="mail"></i>
+                        </div>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right">
+                        <a class="dropdown-item" href="#"><i data-feather="user"></i> cuenta</a>
+                        <a class="dropdown-item" href="#"><i data-feather="settings"></i> Configuración</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="login.html"><i data-feather="log-out"></i>Cerrar sesión</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
+                        <div class="avatar mr-1">
+                            <img src="{% static 'assets/images/avatar/avatar-1.jpg'%}" alt="" srcset="">
+                        </div>
+                        <div class="d-none d-md-block d-lg-inline-block">Hola, {{nombre_completo}}</div>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right">
+                        <a class="dropdown-item" href="#"><i data-feather="user"></i> cuenta</a>
+                        <a class="dropdown-item" href="#"><i data-feather="settings"></i> Configuración</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="login.html"><i data-feather="log-out"></i>Cerrar sesión</a>
+                    </div>
+                </li>
+            </ul>
         </div>
-        <div id="main">
-            <nav class="navbar navbar-header navbar-expand navbar-light">
-                <a class="sidebar-toggler" href="#"><span class="navbar-toggler-icon"></span></a>
-                <button class="btn navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav d-flex align-items-center navbar-light ml-auto">
-                        <li class="dropdown nav-icon">
-                            <a href="#" data-toggle="dropdown" class="nav-link  dropdown-toggle nav-link-lg nav-link-user">
-                                <div class="d-lg-inline-block">
-                                    <i data-feather="bell"></i>
-                                </div>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right dropdown-menu-large">
-                                <h6 class='py-2 px-4'>Notifications</h6>
-                                <ul class="list-group rounded-none">
-                                    <li class="list-group-item border-0 align-items-start">
-                                        <div class="avatar bg-success mr-3">
-                                            <span class="avatar-content"><i data-feather="shopping-cart"></i></span>
-                                        </div>
-                                        <div>
-                                            <h6 class='text-bold'>New Order</h6>
-                                            <p class='text-xs'>
-                                                An order made by Ahmad Saugi for product Samsung Galaxy S69
-                                            </p>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="dropdown nav-icon mr-2">
-                            <a href="#" data-toggle="dropdown" class="nav-link  dropdown-toggle nav-link-lg nav-link-user">
-                                <div class="d-lg-inline-block">
-                                    <i data-feather="mail"></i>
-                                </div>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right">
-                                <a class="dropdown-item" href="#"><i data-feather="user"></i> cuenta</a>
-                                <a class="dropdown-item" href="#"><i data-feather="settings"></i> Configuración</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="login.html"><i data-feather="log-out"></i>Cerrar sesión</a>
-                            </div>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
-                                <div class="avatar mr-1">
-                                    <img src="{% static 'assets/images/avatar/avatar-1.jpg'%}" alt="" srcset="">
-                                </div>
-                                <div class="d-none d-md-block d-lg-inline-block">Hola, {{nombre_completo}}</div>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right">
-                                <a class="dropdown-item" href="#"><i data-feather="user"></i> cuenta</a>
-                                <a class="dropdown-item" href="#"><i data-feather="settings"></i> Configuración</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="login.html"><i data-feather="log-out"></i>Cerrar sesión</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            
-            <div class="main-content container-fluid">
-                <div class="page-title">
-                    <div class="row">
-                        <div class="col-12 col-md-6 order-md-1 order-last">
-                            <h3>Buscar Producto</h3>
-                            
-                        </div>
-                        <div class="col-12 col-md-6 order-md-2 order-first">
-                            <nav aria-label="breadcrumb" class="breadcrumb-header">
-                                <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="cargar_cliente.html">Clientes</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Buscar Producto</li>
-                                </ol>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-                <section class="section">
-                    <div class="card">
-                        <div class="card-header">
-                           Buscar por categoria de producto
-                        </div>
-                        <div class="card-body" style="overflow-x: auto;">
-                            <div class="dataTable-wrapper dataTable-loading no-footer sortable searchable fixed-columns"><div class="dataTable-top"><div class="dataTable-dropdown"><select class="dataTable-selector form-select"><option value="5">5</option><option value="10" selected="">10</option><option value="15">15</option><option value="20">20</option><option value="25">25</option></select><label>Buscar por nombre</label></div><div class="dataTable-search"><input class="dataTable-input" placeholder="Buscar..." type="text"></div></div><div class="dataTable-container"><table class="table table-striped dataTable-table" id="table1">
-                                <thead>
-                                    <tr><th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Nombre</a></th><th data-sortable="" style="width: 23.2012%;"><a href="#" class="dataTable-sorter">Codigo</a></th><th data-sortable="" style="width: 20.8988%;"><a href="#" class="dataTable-sorter">Precio/compra</a></th><th data-sortable="" style="width: 26.7434%;"><a href="#" class="dataTable-sorter">Precio/Venta</a></th><th data-sortable="" style="width: 22.1386%;"><a href="#" class="dataTable-sorter">categoria</a></th><th data-sortable="" style="width: 22.1386%;"><a href="#" class="dataTable-sorter">cantidad</a></tr>
-                                </thead>
-                                
-                                    {%for lista in listatabla%}
-                                    
-                                <tr>
-                                    
-                                    <td>{{lista.nombre_productos}}</td>
-                                    <td>{{lista.codigo_productos}}</td>
-                                    <td>{{lista.preciocompra_productos}}</td>
-                                    <td>{{lista.precioventa_productos}}</td>
-                                    
-                                    {% for categoria in listacategoria %}
-                                    {% if categoria.codigo_categoria == lista.categoria_productos %}     
-                                    <td>{{categoria.nombre_categoria}}</td>
-                                    {% endif %}
-                                    {% endfor %}
-                                    <td>{{lista.cantidad_productos}}</td>
-                                        <td><th data-sortable=""><a href="{%url 'editproducto' lista.codigo_productos %}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
-                                            
-                                            Editar 
-                                          </a>
-                                        <th data-sortable=""><a onclick="checker()" href="{%url 'borrarproducto' lista.codigo_productos %}" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Delete user">
-                                                
-                                                borrar
-                                            </a></td>
-                                        
-                                    
-                                
-                                    
-                                
-                                </tr>
-                
-                                {%endfor%}                                            
-                                      
-                        </div>
-                    </div>
-            
-                </section>
-            </div>
+    </nav>
 
-            <footer>
-                <div class="footer clearfix mb-0 text-muted">
-                    <a href="{%url 'editproducto' 0 %}">
-                 <button class="agregar_producto">
-                     Añadir Producto
-                 </button>
-                </a>   
-                    
+    <div class="main-content container-fluid">
+        <div class="page-title">
+            <div class="row">
+                <div class="col-12 col-md-6 order-md-1 order-last">
+                    <h3>Buscar Producto</h3>
+
                 </div>
-            </footer>
+                <div class="col-12 col-md-6 order-md-2 order-first">
+                    <nav aria-label="breadcrumb" class="breadcrumb-header">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="cargar_cliente.html">Clientes</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Buscar Producto</li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
         </div>
+        <section class="section">
+            <div class="card">
+                <div class="busqueda">
+                    <div>
+                        <label for="ingresar-nombre">Buscar producto </label>
+                        <input type="text" class="clienteptex" id="buscar"> <!-- ID de "buscar" para realizar busqueda-->
+                    </div>
+                </div>
+            
+                    <div class="dataTable-container" style="overflow-y:auto;">
+                        <table class="table table-striped dataTable-table" id="tabla">
+                            <thead>
+                                <tr>
+                                    <th data-sortable="" style="width: 23.2012%;"><a href="#"
+                                            class="dataTable-sorter">Nombre</a></th>
+                                    <th data-sortable="" style="width: 23.2012%;"><a href="#"
+                                            class="dataTable-sorter">Codigo</a></th>
+                                    <th data-sortable="" style="width: 20.8988%;"><a href="#"
+                                            class="dataTable-sorter">Precio/compra</a></th>
+                                    <th data-sortable="" style="width: 26.7434%;"><a href="#"
+                                            class="dataTable-sorter">Precio/Venta</a></th>
+                                    <th data-sortable="" style="width: 22.1386%;"><a href="#"
+                                            class="dataTable-sorter">categoria</a></th>
+                                    <th data-sortable="" style="width: 22.1386%;"><a href="#"
+                                            class="dataTable-sorter">cantidad</a>
+                                </tr>
+                            </thead>
+
+                            {%for lista in listatabla%}
+
+                            <tr>
+
+                                <td>{{lista.nombre_productos}}</td>
+                                <td>{{lista.codigo_productos}}</td>
+                                <td>{{lista.preciocompra_productos}}</td>
+                                <td>{{lista.precioventa_productos}}</td>
+
+                                {% for categoria in listacategoria %}
+                                {% if categoria.codigo_categoria == lista.categoria_productos %}
+                                <td>{{categoria.nombre_categoria}}</td>
+                                {% endif %}
+                                {% endfor %}
+                                <td>{{lista.cantidad_productos}}</td>
+                                <td>
+                                <th data-sortable=""><a href="{%url 'editproducto' lista.codigo_productos %}"
+                                        class="text-secondary font-weight-bold text-xs" data-toggle="tooltip"
+                                        data-original-title="Edit user">
+
+                                        Editar
+                                    </a>
+                                <th data-sortable=""><a onclick="checker()"
+                                        href="{%url 'borrarproducto' lista.codigo_productos %}"
+                                        
+                                        class="text-secondary font-weight-bold text-xs" data-toggle="tooltip"
+                                        data-original-title="Delete user">
+                                        
+
+                                        borrar
+                                    </a></td>
+
+
+
+
+
+                            </tr>
+
+                            {%endfor%}
+
+                    </div>
+            </div>
     </div>
 
+    </section>
+</div>
+
+<footer>
+    <div class="footer clearfix mb-0 text-muted">
+        <a href="{%url 'editproducto' 0 %}">
+            <button class="agregar_producto">
+                Añadir Producto
+            </button>
+        </a>
+
+    </div>
+</footer>
+</div>
+</div>
+
 </body>
+
 </html>
+<script src="{% static 'assets/js/search.js' %}"></script> <!-- Script para busqueda-->
 <script src="{% static 'assets/js/feather-icons/feather.min.js'%}"></script>
 <script src="{% static 'assets/vendors/perfect-scrollbar/perfect-scrollbar.min.js'%}"></script>
 <script src="{% static 'assets/js/app.js'%}"></script>
